refactor: 优化同步代码 v4